Adding readme with lists of checks per device type - that has been tested

--- a/README
+++ b/README
@@ -7,3 +7,22 @@ dev/* - Scripts used during development
 imported/* - Scripts we didn't write but which we use
 
 setup.py - Will check that all dependencies are in place, and auto-download all Cisco MIBs
+
+
+Cisco IOS:
+	check_bgp.py
+	check_ibgp.py
+	check_mpls_l2vpn.py
+	check_vss_status.py
+	check_ospfv3_if.py
+	cisco_entity_sensors.py (Works but very limited functionality)
+
+Cisco IOS-XR/XE and NX-OS:
+	check_bgp.py
+	check_ibgp.py
+	check_mpls_l2vpn.py
+	check_ospfv3_if.py
+	cisco_entity_sensors.py
+
+Dell (former Force10) FTOS:
+	ftos_chassis.py
