Adding VPC check for Cisco Nexus switches

--- a/README
+++ b/README
@@ -18,13 +18,22 @@ Cisco IOS:
 	check_ospfv3_if.py
 	cisco_entity_sensors.py (Works but very limited functionality)
 
-Cisco IOS-XR/XE and NX-OS:
+Cisco IOS-XR:
 	check_bgp.py
 	check_ibgp.py
 	check_mpls_l2vpn.py
 	check_ospf.py
 	check_ospfv3_if.py
 	cisco_entity_sensors.py
+
+Cisco NX-OS:
+	check_bgp.py
+	check_ibgp.py
+	check_mpls_l2vpn.py
+	check_ospf.py
+	check_ospfv3_if.py
+	cisco_entity_sensors.py
+	cisco_vpc.py
 
 Dell (former Force10) FTOS:
 	ftos_chassis.py
