Adding new check_ping_cisco_ssh.sh which is used to run ping checks over SSH to a Cisco router.

--- a/README
+++ b/README
@@ -17,6 +17,7 @@ Cisco IOS:
 	check_ospf.py
 	check_ospfv3_if.py
 	cisco_entity_sensors.py (Works but very limited functionality)
+    check_ping_cisco_ssh.sh
 
 Cisco IOS-XR:
 	check_bgp.py
